--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,6 +15,11 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+
+  @media (max-width: 645px) {
+    width: calc(100vw - 30px);
+    margin-top: 15 px;
+  }
 }
 
 .content {
@@ -22,20 +27,72 @@ body {
 
   &__title {
     margin: 35px 0;
+      font-weight: 800;
+      font-size: 38px;
+      margin-top: 60px;
+      margin-bottom: 50px;
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows:repeat(2, 1fr);
+    grid-column-gap: 11px;
+
+    @media (max-width: 1400px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @media (max-width: 1060px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 750px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 1260px) {
+     
+      .categories{
+      
+        width: 100%;
+        overflow: auto;
+
+        ul {
+          width: 785px;
+        }
+      }
+      .sort {
+        padding-left: 20px;
+        b {
+          display: none;
+        }
+      }
+      @media (max-width:390px) {
+        .categories{
+          ul {
+            li {
+              padding: 8px 20px;
+            }
+          }
+        }
+      }
+    }
+
+    @media (max-width:820px) {
+      .categories {
+        margin-top: 30px;
+      }
+      flex-direction: column-reverse;
+    }
   }
-}
+ 
+  }
+
 
 .container {
   width: $container-width;
@@ -46,6 +103,8 @@ body {
     margin: 90px auto;
     .content__title {
       margin: 0;
+      
+
     }
   }
 }
@@ -104,6 +163,9 @@ body {
         color: darken($color: #b6b6b6, $amount: 50);
       }
     }
+  }
+  .content__items {
+    display: flex;
   }
 
   &__item {
